--- a/executive.html
+++ b/executive.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Executive Summary</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Executive Summary</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <div class="container">
