--- a/career.html
+++ b/career.html
@@ -10,8 +10,7 @@
 
 <body>
     <div>
-        <section class = "general-info">
-
+        <section class="general-info">
             <p>Noah Bradley is an American artist primarily known for his work on Magic: The Gathering cards and his
                 The Sin of Man project. He is well known amongst the Reddit community from his frequent contributions to
                 various subreddits.</p>
@@ -19,11 +18,29 @@
             <ul>
                 <li>Professional Artist</li>
             </ul>
+            <div>
+                <h3>Published Work: </h3>
+                <img src="https://cdn.shopify.com/s/files/1/0153/7791/products/Noah-Bradley_ein-sof_1400x.jpg?v=1514328842"
+                    alt="tree">
+                <img src="https://cdna.artstation.com/p/assets/images/images/013/761/784/large/noah-bradley-noah-bradley-polymorphous.jpg?1541003548"
+                    alt="space">
+                <img src="https://cdna.artstation.com/p/assets/images/images/003/040/580/large/noah-bradley-noah-bradley-bastion-of-the-sun.jpg?1468873727"
+                    alt="elf">
+            </div>
 
-            <h3>Published Work: </h3>
-                <img src="https://cdn.shopify.com/s/files/1/0153/7791/products/Noah-Bradley_ein-sof_1400x.jpg?v=1514328842" alt="tree">
-                <img src="https://cdna.artstation.com/p/assets/images/images/013/761/784/large/noah-bradley-noah-bradley-polymorphous.jpg?1541003548" alt="space">
-                <img src="https://cdna.artstation.com/p/assets/images/images/003/040/580/large/noah-bradley-noah-bradley-bastion-of-the-sun.jpg?1468873727" alt="elf">
+            <h3>Places lived: </h3>
+            <ul>
+                <li>Virginia</li>
+                <li>Rhode Island</li>
+            </ul>
+            <h3>Collaborators: </h3>
+            <ul>
+                <li>Chris Oatley</li>
+            </ul>
+            <h3>Awards: </h3>
+            <ul>
+                <li>2012 Stabby for Best Artwork</li>
+            </ul>
         </section>
     </div>
 </body>
