nested information in respective divs

--- a/career.html
+++ b/career.html
@@ -27,20 +27,26 @@
                 <img src="https://cdna.artstation.com/p/assets/images/images/003/040/580/large/noah-bradley-noah-bradley-bastion-of-the-sun.jpg?1468873727"
                     alt="elf">
             </div>
+            <div>
+                <h3>Places lived: </h3>
+                <ul>
+                    <li>Virginia</li>
+                    <li>Rhode Island</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Collaborators: </h3>
+                <ul>
+                    <li>Chris Oatley</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Awards: </h3>
+                <ul>
+                    <li>2012 Stabby for Best Artwork</li>
+                </ul>
 
-            <h3>Places lived: </h3>
-            <ul>
-                <li>Virginia</li>
-                <li>Rhode Island</li>
-            </ul>
-            <h3>Collaborators: </h3>
-            <ul>
-                <li>Chris Oatley</li>
-            </ul>
-            <h3>Awards: </h3>
-            <ul>
-                <li>2012 Stabby for Best Artwork</li>
-            </ul>
+            </div>
         </section>
     </div>
 </body>
