Added new picture

--- a/executive.html
+++ b/executive.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+        <nav>
+        <ul class="nav--ul">
+            <li class="nav--li"><a href="personal.html">Personal</a></li>
+            <li class="nav--li"><a href="#">News Feed</a></li>
+            <li class="nav--li"><a href="career.html">Career</a></label>
+            <li class="nav--li"><a href="executive.html">Executive Summary</a></li>
+        </ul>
+    </nav>
+
+
     <div class="container">
+        <img class="rounded-img" src="https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjV3pjC4dfgAhXhz4MKHf8EBKYQjRx6BAgBEAU&url=https%3A%2F%2Ftwitter.com%2Fnoahbradley&psig=AOvVaw3SnraBCcLMpcng0AYFcn9J&ust=1551214245392753" alt="">
    <h1>Welcome to Executive Summary</h1> 
 </div>
 </body>
