--- a/career.html
+++ b/career.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="career.css">
     <title>Document</title>
 </head>
 
@@ -18,7 +19,7 @@
             <ul>
                 <li>Professional Artist</li>
             </ul>
-            <div>
+            <div class = "published-work">
                 <h3>Published Work: </h3>
                 <img src="https://cdn.shopify.com/s/files/1/0153/7791/products/Noah-Bradley_ein-sof_1400x.jpg?v=1514328842"
                     alt="tree">
