Added text to executive.html

--- a/executive.html
+++ b/executive.html
@@ -24,10 +24,11 @@
     <h1>Welcome to Executive Summary</h1> 
 
     <div class="collaborator">
-       <h2> Noah Brandley collaborators with the artistcollaborators with the artistcollaborators with the artistcollaborators with the artist:</h2>
+       <h2> Noah Brandley collaborators artist:</h2>
        <ul>
            <li> Andrew Loomis, figure drowing for All it's Worth.</li><br>
            <li> Harold Speed, The practice and science of drowing. All painting techniques and meterial.</li>
+           <li>James Gurney, helped color and lighting, imaginative realism.</li><br>
        </ul>
     </div>
 
