Changed to section into div

--- a/executive.html
+++ b/executive.html
@@ -23,15 +23,19 @@
     </div>
     <h1>Welcome to Executive Summary</h1> 
 
-    <div class="collaborator">
-        <img class="noah-img" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/eec53c15-c1be-4abd-abc1-fa361df29370/dby3zas-bd70f102-9ca8-43d0-a0be-1b66edc7fd49.jpg" alt="">
-       <h2> Noah Brandley collaborators artist:</h2>
-       <ul>
-           <li> Andrew Loomis, figure drowing for All it's Worth.</li>
-           <li> Harold Speed, The practice and science of drowing. All painting techniques and meterial.</li>
-           <li>James Gurney, helped color and lighting, imaginative realism.</li><br>
-       </ul>
-    </div>
+<section class="collaborator">
+    <div class="pic-noah">
+            <img class="noah-img" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/eec53c15-c1be-4abd-abc1-fa361df29370/dby3zas-bd70f102-9ca8-43d0-a0be-1b66edc7fd49.jpg" alt="">
+            <h2> Noah Brandley collaborators artist:</h2>
+            <ul>
+                <li> Andrew Loomis, figure drowing for All it's Worth.</li>
+                <li> Harold Speed, The practice and science of drowing. All painting techniques and meterial.</li>
+                <li>James Gurney, helped color and lighting, imaginative realism.</li><br>
+            </ul>
+         </div>
+         
+</section>
+
 
 </body>
 </html>
