added new pictures and text

--- a/executive.html
+++ b/executive.html
@@ -30,12 +30,14 @@
         <div class="pic-noah">
             <img class="flex" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/intermediary/f/eec53c15-c1be-4abd-abc1-fa361df29370/dby3zas-bd70f102-9ca8-43d0-a0be-1b66edc7fd49.jpg"
                 alt="">
-                <h2>Noah Brandley</h2>
-                <p>I love reading books on art. Not just the kind with pretty pictures, either. But the kind
-                 with words. It baffles me how few of my classes during art school actually had required texts.
-                Thankfully I was lucky enough to stumble into the world of art books on my own, and I believe I’m a better artist for it.</p>
+            <h2>Noah Brandley</h2>
+            <p>I love reading books on art. Not just the kind with pretty pictures, either. But the kind
+                with words. It baffles me how few of my classes during art school actually had required texts.
+                Thankfully I was lucky enough to stumble into the world of art books on my own, and I believe I’m a
+                better artist for it.</p>
             <h2> Noah Brandley collaborators artist:</h2>
             <ul>
+                <li> He and Mark Rosewater are both widely known for their work done for the Magic</li>
                 <li> Andrew Loomis, figure drowing for All it's Worth.</li>
                 <li> Harold Speed, The practice and science of drowing. All painting techniques and meterial.</li>
                 <li>James Gurney, helped color and lighting, imaginative realism.</li><br>
@@ -43,6 +45,17 @@
         </div>
 
     </section>
+    <section>
+        <div>
+            <img src="https://scentofagamer.files.wordpress.com/2015/09/nbpaints2.jpg" alt="">
+            <p> Noah Bradley bonned in Virginia 0ctober 21, 1988 libra city.
+                he began the online educational web series Art Camp, where he has taught masterclasses in painting and illustration. He attended 
+                the Rhode Island School of Design before transferring to Virginia Commonwealth University.
+                His father worked as a carpenter.</p>
+        </div>
+    </section>
+
+
 
 
 </body>
