--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     <title>Document</title>
 </head>
-<body>
-    <div class="home">
-        
+<body>  
+    <div id="home">
+        <nav class="nav">
+            <ul class="nav-list">
+                <li>Summary</li>
+                <li>Career</li>
+                <li>Personal</li>  
+                <li>News Feed</li>
+            </ul>
+        </nav>
+        <h1 class="main-title">Noah Bradley</h1>
     </div>
 </body>
 </html>
