--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,17 +10,19 @@
 
     <title>Document</title>
 </head>
-<body>  
+
+<body>
     <div id="home">
         <nav class="nav">
             <ul class="nav-list">
-                <li>Summary</li>
-                <li>Career</li>
-                <li>Personal</li>  
-                <li>News Feed</li>
+                <li><a href="#">Summary</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Personal</a></li>
+                <li><a href="#">News Feed</a></li>
             </ul>
         </nav>
         <h1 class="main-title">Noah Bradley</h1>
     </div>
 </body>
+
 </html>
