changed home div to section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div id="home">
+    <section id="home">
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="#">Summary</a></li>
@@ -22,7 +22,7 @@
             </ul>
         </nav>
         <h1 class="main-title">Noah Bradley</h1>
-    </div>
+    </section>
 </body>
 
 </html>
