added propper links

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <section id="home">
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="#">Summary</a></li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Personal</a></li>
-                <li><a href="#">News Feed</a></li>
+                <li><a href="executive-summary">Summary</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="personal.html">Personal</a></li>
+                <li><a href="newsfeed.html">News Feed</a></li>
             </ul>
         </nav>
         <h1 class="main-title">Noah Bradley</h1>
