fixed link to executive.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section id="home">
         <nav class="nav">
             <ul class="nav-list">
-                <li><a href="executive-summary">Summary</a></li>
+                <li><a href="executive.hmtl">Summary</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="personal.html">Personal</a></li>
                 <li><a href="newsfeed.html">News Feed</a></li>
