--- a/personal.html
+++ b/personal.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,19 +8,27 @@
     <link rel="stylesheet" href="personal.css">
     <title>Document</title>
 </head>
+
 <body>
-    <!-- Flexbox for different elements -->
-        <!-- Age  30-->
-        <!-- Birthdate October 21st 1988 -->
-        <!-- Birthplace Virginia-->
-        <!-- Birthsign Libra -->
-        <!-- Family "Son of a carpenter, wife Rachel Bradley (who is also an artist)" -->
-        <div class= "personal">
+    <nav>
+        <ul class="nav--ul">
+            <li class="nav--li"><a href="personal.html">Personal</a></li>
+            <li class="nav--li"><a href="newsfeed.html">News Feed</a></li>
+            <li class="nav--li"><a href="career.html">Career</a></label>
+            <li class="nav--li"><a href="executive.html">Executive Summary</a></li>
+        </ul>
+        <div class="personal">
             <h1 class='personal--title'>Noah Bradley</h1>
-            <h2 class='personal--age'>Age:</h2> <p>30</p>
-            <h2 class='personal--birthplace'>Birthplace:</h2> <p>Virginia</p>
-            <h2 class='personal--birthsign'>Sign:</h2> <p>Libra</p>
-            <h2 class='personal--family'>Family:</h2> <p>Noah Bradley is the sone of a carpenter. His wife, Rachel Bradley, also works in the illustration industry.</p>
+            <h2 class='personal--age'>Age:</h2>
+            <p>30</p>
+            <h2 class='personal--birthplace'>Birthplace:</h2>
+            <p>Virginia</p>
+            <h2 class='personal--birthsign'>Sign:</h2>
+            <p>Libra</p>
+            <h2 class='personal--family'>Family:</h2>
+            <p>Noah Bradley is the sone of a carpenter. His wife, Rachel Bradley, also works in the illustration
+                industry.</p>
         </div>
 </body>
+
 </html>
