fixed personal.html's lack of main.css linkage

--- a/personal.html
+++ b/personal.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="personal.css">
     <title>Document</title>
 </head>
@@ -26,7 +27,7 @@
             <h2 class='personal--birthsign'>Sign:</h2>
             <p>Libra</p>
             <h2 class='personal--family'>Family:</h2>
-            <p>Noah Bradley is the sone of a carpenter. His wife, Rachel Bradley, also works in the illustration
+            <p>Noah Bradley is the son of a carpenter. His wife, Rachel Bradley, also works in the illustration
                 industry.</p>
         </div>
 </body>
