Added h1 css move from right to center

--- a/executive.html
+++ b/executive.html
@@ -13,7 +13,7 @@
     <nav>
         <ul class="nav--ul">
             <li class="nav--li"><a href="personal.html">Personal</a></li>
-            <li class="nav--li"><a href="#">News Feed</a></li>
+            <li class="nav--li"><a href="newsfeed.html">News Feed</a></li>
             <li class="nav--li"><a href="career.html">Career</a></label>
             <li class="nav--li"><a href="executive.html">Executive Summary</a></li>
         </ul>
