basic flexbox styling for personal.css

--- a/personal.html
+++ b/personal.html
@@ -18,18 +18,28 @@
             <li class="nav--li"><a href="career.html">Career</a></label>
             <li class="nav--li"><a href="executive.html">Executive Summary</a></li>
         </ul>
-        <div class="personal">
-            <h1 class='personal--title'>Noah Bradley</h1>
-            <h2 class='personal--age'>Age:</h2>
-            <p>30</p>
-            <h2 class='personal--birthplace'>Birthplace:</h2>
-            <p>Virginia</p>
-            <h2 class='personal--birthsign'>Sign:</h2>
-            <p>Libra</p>
-            <h2 class='personal--family'>Family:</h2>
-            <p>Noah Bradley is the son of a carpenter. His wife, Rachel Bradley, also works in the illustration
+    </nav>
+    <div class="personal">
+        <h1 class='personal--title'>Personal Profile</h1>
+        <span class='personal--sub'>
+            <h2>Age: </h2>
+            <p class='personal--text'> 30</p>
+        </span>
+        <span class='personal--sub'>
+            <h2>Birthplace: </h2>
+            <p class='personal--text'> Virginia</p>
+        </span>
+        <span class='personal--sub'>
+            <h2>Sign: </h2>
+            <p class='personal--text'> Libra</p>
+        </span>
+        <span class='personal--sub'>
+            <h2>Family: </h2>
+            <p class='personal--text'> Noah Bradley is the son of a carpenter. His wife, Rachel Bradley, also works in
+                the illustration
                 industry.</p>
-        </div>
+        </span>
+    </div>
 </body>
 
 </html>
