--- a/career.html
+++ b/career.html
@@ -6,11 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="career.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <div>
+    <div class = "main-container">
+        <div id="top-image">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="executive.hmtl">Summary</a></li>
+                    <li><a href="career.html">Career</a></li>
+                    <li><a href="personal.html">Personal</a></li>
+                    <li><a href="newsfeed.html">News Feed</a></li>
+                </ul>
+            </nav>
+        </div>
         <section class="general-info">
             <p>Noah Bradley is an American artist primarily known for his work on Magic: The Gathering cards and his
                 The Sin of Man project. He is well known amongst the Reddit community from his frequent contributions to
@@ -19,14 +31,26 @@
             <ul>
                 <li>Professional Artist</li>
             </ul>
-            <div class = "published-work">
-                <h3>Published Work: </h3>
-                <img src="https://cdn.shopify.com/s/files/1/0153/7791/products/Noah-Bradley_ein-sof_1400x.jpg?v=1514328842"
-                    alt="tree">
-                <img src="https://cdna.artstation.com/p/assets/images/images/013/761/784/large/noah-bradley-noah-bradley-polymorphous.jpg?1541003548"
-                    alt="space">
-                <img src="https://cdna.artstation.com/p/assets/images/images/003/040/580/large/noah-bradley-noah-bradley-bastion-of-the-sun.jpg?1468873727"
-                    alt="elf">
+            <h3 style="text-align: center">Published Work: </h3>
+            <div class="published-work">
+
+                <div class="card">
+                    <img src="https://cdn.shopify.com/s/files/1/0153/7791/products/Noah-Bradley_ein-sof_1400x.jpg?v=1514328842"
+                        alt="tree">
+                </div>
+
+                <div class="card">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/013/761/784/large/noah-bradley-noah-bradley-polymorphous.jpg?1541003548"
+                        alt="space">
+                </div>
+
+                <div class="card">
+                    <img src="https://cdna.artstation.com/p/assets/images/images/003/040/580/large/noah-bradley-noah-bradley-bastion-of-the-sun.jpg?1468873727"
+                        alt="elf">
+                </div>
+            </div>
+            <div class="black-spacer">
+
             </div>
             <div>
                 <h3>Places lived: </h3>
