--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <section id="home">
         <nav class="nav">
             <ul class="nav-list">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="executive.hmtl">Summary</a></li>
                 <li><a href="career.html">Career</a></li>
                 <li><a href="personal.html">Personal</a></li>
