updated nav elements to bring it in line with main page.

--- a/personal.html
+++ b/personal.html
@@ -5,20 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="personal.css">
+    <link rel="stylesheet" href="main.css">
     <title>Document</title>
 </head>
 
 <body>
-    <nav>
-        <ul class="nav--ul">
-            <li class="nav--li"><a href="personal.html">Personal</a></li>
-            <li class="nav--li"><a href="newsfeed.html">News Feed</a></li>
-            <li class="nav--li"><a href="career.html">Career</a></label>
-            <li class="nav--li"><a href="executive.html">Executive Summary</a></li>
-        </ul>
-    </nav>
+    <section id="home">
+        <nav class="nav">
+            <ul class="nav-list">
+                <li><a href="executive.hmtl">Summary</a></li>
+                <li><a href="career.html">Career</a></li>
+                <li><a href="personal.html">Personal</a></li>
+                <li><a href="newsfeed.html">News Feed</a></li>
+            </ul>
+        </nav>
+        <h1 class="main-title">Noah Bradley</h1>
+    </section>
     <div class="personal">
         <h1 class='personal--title'>Personal Profile</h1>
         <span class='personal--sub'>
