--- a/career.html
+++ b/career.html
@@ -18,7 +18,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="executive.hmtl">Summary</a></li>
+                        <li><a href="executive.html">Summary</a></li>
                         <li><a href="career.html">Career</a></li>
                         <li><a href="personal.html">Personal</a></li>
                         <li><a href="newsfeed.html">News Feed</a></li>
