--- a/personal.html
+++ b/personal.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section id="home">
+    <section class = 'home'>
         <nav class="nav">
             <ul class="nav-list">
                 <li><a href="executive.hmtl">Summary</a></li>
@@ -22,28 +22,35 @@
             </ul>
         </nav>
         <h1 class="main-title">Noah Bradley</h1>
+        <div class="personal">
+            <h1 class='personal--title'>Personal Profile</h1>
+            <span class='personal--sub'>
+                <h2>Age: </h2>
+                <p class='personal--text'> 30</p>
+            </span>
+            <span class='personal--sub'>
+                <h2>Birthplace: </h2>
+                <p class='personal--text'> Virginia</p>
+            </span>
+            <span class='personal--sub'>
+                <h2>Sign: </h2>
+                <p class='personal--text'> Libra</p>
+            </span>
+            <span class='personal--sub'>
+                <h2>Family: </h2>
+                <p class='personal--text'> Noah Bradley is the son of a carpenter. His wife, Rachel Bradley, also works in
+                    the illustration
+                    industry.</p>
+            </span>
+        </div>
+    
     </section>
-    <div class="personal">
-        <h1 class='personal--title'>Personal Profile</h1>
-        <span class='personal--sub'>
-            <h2>Age: </h2>
-            <p class='personal--text'> 30</p>
-        </span>
-        <span class='personal--sub'>
-            <h2>Birthplace: </h2>
-            <p class='personal--text'> Virginia</p>
-        </span>
-        <span class='personal--sub'>
-            <h2>Sign: </h2>
-            <p class='personal--text'> Libra</p>
-        </span>
-        <span class='personal--sub'>
-            <h2>Family: </h2>
-            <p class='personal--text'> Noah Bradley is the son of a carpenter. His wife, Rachel Bradley, also works in
-                the illustration
-                industry.</p>
-        </span>
-    </div>
+    <footer>
+        <a href="https://twitter.com/noahbradley">Twitter</a>
+        <a href="https://www.youtube.com/channel/UCYu89Q_krburzkoDSpm5xjw">YouTube</a>
+        <a href="https://www.instagram.com/noahbradley/?hl=de">Instagram</a>
+        <a href="https://noahbradley.tumblr.com/">Tumblr</a>
+    </footer>
 </body>
 
 </html>
